--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build": "nest build",
     "start:local": "dotenv -e .env.local -- nest start --watch",
     "start:dev": "export NODE_ENV=dev && node dist/src/main",
-
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -17,6 +16,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "5.7.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.0",
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "5.7.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
