--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.2.7",
+    "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "5.7.1",
     "@types/amqplib": "^0.10.5",
