refactor: Move AuthHandler to infrastructure/handler folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,12 @@
       ],
       "@prisma/*":[
         "./src/prisma/*"
+      ],
+      "@config":[
+        "./src/config"
+      ],
+      "@config/*":[
+        "./src/config/*"
       ]
     }
   }
