--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,7 @@
     "include": [
         "modules/**/*",
         "prisma/**/*",
+        "config/**/*",
     ],
     "exclude": [
         "node_modules",
