refactor: Move AuthHandler to infrastructure/handler folder

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,7 +7,7 @@
     "include": [
         "modules/**/*",
         "prisma/**/*",
-        "config/**/*",
+        "config/**/*", "sagas/user.saga.ts",
     ],
     "exclude": [
         "node_modules",
