refactor: Remove unused RabbitMqModule imports and RabbitMqConfig in app.module.ts and user.module.ts

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,7 +7,7 @@
     "include": [
         "modules/**/*",
         "prisma/**/*",
-        "config/**/*", "sagas/user.saga.ts",
+        "sagas/**/*",
     ],
     "exclude": [
         "node_modules",
