--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "start:local": "dotenv -e .env.local -- nest start --watch",
-    "start:dev": "export NODE_ENV=dev && node dist/src/main",
+    "start": "nest start --watch",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -16,10 +15,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.2.7",
-    "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "5.7.1",
-    "@types/amqplib": "^0.10.5",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.0",
@@ -38,16 +35,8 @@
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "amqp-connection-manager": "^4.1.14",
-    "amqplib": "^0.10.4",
     "dotenv-cli": "^7.4.2",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
-    "prettier": "^3.0.0",
     "prisma": "5.7.1",
     "rxjs": "^7.8.1",
     "source-map-support": "^0.5.21",
